<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".Paziente.RichiediRicettaPaziente">

        <RelativeLayout
            android:id="@+id/linearRichiestaRicetta"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/backRichiediVisitaPaz"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/back"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:textColor="@color/greenDark"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Title"
                        android:text="RICHIEDI RICETTA MEDICO"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/greenDark"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:id="@+id/nomeCognomePazienteRichiediRicettaPaz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="PAZIENTE: NOME COGNOME"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/greenDark" />

                    <TextView
                        android:id="@+id/nomeCognomeMedicoRichiediRicettaPaz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/greenDark"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:text="MEDICO DI BASE: NOME COGNOME"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:orientation="vertical">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/descPatologiaRichiediRicettaPaz"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/descrizione_patologia"
                                    android:inputType="text"
                                    android:fontFamily="serif"
                                    android:textColor="@color/black"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Title"
                                    android:background="@null"/>

                            </android.support.design.widget.TextInputLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:layout_marginTop="2dp"
                                android:background="@color/greenDark"/>
                        </LinearLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:padding="4dp">

                            <AutoCompleteTextView
                                android:id="@+id/autoCompleteNomeFarmacoRichiediRicettaPaz"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:hint="@string/farmaco_richiesto"
                                android:fontFamily="serif"
                                android:inputType="text"
                                android:imeOptions="actionDone"
                                android:textColor="@color/black"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Title"
                                android:background="@null"
                                android:ems="10" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:layout_marginTop="2dp"
                                android:background="@color/greenDark"/>

                        </android.support.design.widget.TextInputLayout>


                        <Spinner
                            android:id="@+id/usoFarmacoRichiediRicettaPaz"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:textAlignment="center"
                            android:spinnerMode="dropdown"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginTop="2dp"
                            android:background="@color/greenDark"/>

                        <TextView
                            android:id="@+id/prezzoFarmacoRichiediRicettaPaz"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="20dp"
                            android:textColor="@color/black"
                            android:text="@string/prezzo"
                            android:fontFamily="serif"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                            android:background="@null"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/greenDark"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/esenzione_per_reddito"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/greenDark"
                    android:layout_marginLeft="15dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/esenzione_per_patologia"/>


            </LinearLayout>

        </RelativeLayout>

    <Button
        android:id="@+id/inviaRichiestaPaz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@color/greenDark"
        android:text="@string/invia_richiesta"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Title"
        android:textColor="@color/white" />
</RelativeLayout>